# Aggregator

./: Dockerfile  alembic.ini  docker-compose.yml  k3scluster.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  database.py  dependencies.py  logger.py  main.py
app/aggregator/: exceptions.py  models.py  repository.py
app/aggregator/events/: dependencies.py  models.py  repository.py  router.py  schemas.py  seats_service.py
app/aggregator/places/: models.py  repository.py  schemas.py
app/aggregator/tickets/: models.py  repository.py  router.py  schemas.py  usecase.py
app/aggregator/tickets/idempotency/: models.py  repository.py
app/aggregator/tickets/outbox/: models.py  repository.py  worker.py
app/clients/: exceptions.py  provider_client.py
app/health/: dependencies.py  health.py  router.py
app/migrations/: env.py
app/migrations/versions/: 154c6ec0b734_initial_migration.py  3806d3d9ce12_created_outbox_tabel.py  8ee1b5a055c8_fix_outbox_updated_at_default.py  c44de773a403_created_idempotencykey_tabel.py
app/models/: models.py
app/notifications/: capashino_client.py  exceptions.py
app/provider/: client.py  exceptions.py  paginator.py
app/sync/: deps.py  models.py  repository.py  router.py  scheduler.py  tasks.py  usecase.py
app/tests/: conftest.py  test_provider_client.py
app/usecases/: sync_events.py
docker/: app.sh
